--- a/css/style.css
+++ b/css/style.css
@@ -22,18 +22,49 @@ h1 {
     font-weight: bold;
     font-size: 80px;
 }
-
-.juegos {
-    max-width: 50rem;
-    margin: 50px auto;
+#loginContainer, #welcomeMessage {
+    display: block;
     text-align: center;
-    display: flex;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 30px;
 }
 
-.juegos img {
+.btn {
+    border: none;
+    background: #580078;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: .5s;
+    font-weight: bold;
+}
+.btn:hover {
+    transform: scale(1.2);
+    background: #580078;
+    color: #fff;
+    font-weight: bold;
+}
+
+h2 {
+    width: fit-content;
+    background-color: #fff;
+    margin: 40px auto;
+    border-radius: 60px;
+    box-shadow: 5px 5px 0 #000;
+    padding: 20px 30px;
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.card-body img {
+    display:inline;
     max-width: 25rem;
-    width: 100%;
+    width: 300px;
+    height: 300px;
     margin: 10px;
+    border: 3px solid #000;
 }
 
 .opciones {
@@ -41,40 +72,6 @@ h1 {
     text-align: center;
     font-weight: bold;
     font-size: 30px;
-}
-
-.opcion {
-    display: flex;
-    position: relative;
-    align-items: center;
-    margin: 30px auto;
-    cursor: pointer;
-    max-width: 25rem;
-}
-
-.opcion .letra {
-    background-color: #580078;
-    width: 3.125rem;
-    height: 3.125rem;
-    color: #fff;
-    text-align: center;
-    border-radius: 50%;
-    line-height: 35px;
-    font-size: 30px;
-    border: 5px solid #fff;
-    position: relative;
-}
-
-.opcion .nombre {
-    background: #fff;
-    width: 100%;
-    height: 3.125rem;
-    font-size: 25px;
-    position: absolute;
-    margin-left: 30px;
-    z-index: -2;
-    border-radius: 0 20px 20px 0;
-    padding: 7px 0 7px 30px;
 }
 
 footer {
