--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,6 @@ h2 {
     font-size: 30px;
 }
 
-footer {
-    width: 100%;
-    background-color: #000;
-    font-size: 15px;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-}
-
 .success {
     display: flex;
     align-items: center;
@@ -110,3 +101,14 @@ footer {
     color: #191911;
     background:  rgb(211, 48, 48);
 }
+
+footer {
+    width: 100%;
+    background-color: #000;
+    font-size: 1.3rem;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+
